@@ -1,0 +1,197 @@
+package com.ford.syncV4.proxy;
+
+import android.test.InstrumentationTestCase;
+
+import com.ford.syncV4.exception.SyncException;
+import com.ford.syncV4.marshal.JsonRPCMarshaller;
+import com.ford.syncV4.protocol.ProtocolMessage;
+import com.ford.syncV4.protocol.enums.FunctionID;
+import com.ford.syncV4.proxy.constants.Names;
+import com.ford.syncV4.proxy.interfaces.IProxyListenerALM;
+import com.ford.syncV4.proxy.rpc.OnLanguageChange;
+import com.ford.syncV4.proxy.rpc.TestCommon;
+import com.ford.syncV4.proxy.rpc.enums.AppInterfaceUnregisteredReason;
+import com.ford.syncV4.proxy.rpc.enums.Language;
+
+import org.json.JSONException;
+import org.json.JSONObject;
+import org.mockito.ArgumentCaptor;
+
+import java.util.Hashtable;
+
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.timeout;
+import static org.mockito.Mockito.verify;
+
+/**
+ * Tests for the case when the app is unregistered due to language change.
+ *
+ * Created by enikolsky on 2013-11-14.
+ */
+public class LanguageChangeTest extends InstrumentationTestCase {
+
+    private static final int CALLBACK_WAIT_TIMEOUT = 500;
+
+    private static SyncProxyALM getSyncProxyALMNoTransport(
+            IProxyListenerALM proxyListener) throws SyncException {
+        // we use custom subclass here to override the initializeProxy() method
+        // to avoid using a transport
+        return new SyncProxyALM(proxyListener, "!", null, null, true, null,
+                null, null, null, null, false, null) {
+            @Override
+            protected void initializeProxy() throws SyncException {
+            }
+        };
+    }
+
+    private static ProtocolMessage createProtocolMessage(
+            final String functionName, final Hashtable<String, Object> params,
+            final byte rpcType, final int corrID) throws JSONException {
+        ProtocolMessage pm = new ProtocolMessage();
+        pm.setCorrID(corrID);
+
+        if (params != null) {
+            JSONObject paramsObject =
+                    JsonRPCMarshaller.serializeHashtable(params);
+            byte[] paramsData = paramsObject.toString().getBytes();
+            pm.setData(paramsData, paramsData.length);
+            pm.setJsonSize(paramsData.length);
+        }
+
+        pm.setFunctionID(FunctionID.getFunctionID(functionName));
+        pm.setRPCType(rpcType);
+
+        return pm;
+    }
+
+    @Override
+    public void setUp() throws Exception {
+        super.setUp();
+        TestCommon.setupMocking(this);
+    }
+
+    public void testCorrectLanguageChange()
+            throws SyncException, JSONException {
+        IProxyListenerALM proxyListenerMock = mock(IProxyListenerALM.class);
+        SyncProxyALM proxy = getSyncProxyALMNoTransport(proxyListenerMock);
+        assertNotNull(proxy);
+        proxy._wiproVersion = 2;
+
+        // send OnLanguageChange first
+        Hashtable<String, Object> params = new Hashtable<String, Object>();
+        final Language lang = Language.AR_SA;
+        params.put(Names.language, lang);
+        final Language hmiLang = Language.CS_CZ;
+        params.put(Names.hmiDisplayLanguage, hmiLang);
+        proxy.dispatchIncomingMessage(
+                createProtocolMessage(Names.OnLanguageChange, params,
+                        ProtocolMessage.RPCTYPE_NOTIFICATION, 1));
+
+        // send OnAppInterfaceUnregistered second
+        params = new Hashtable<String, Object>();
+        final AppInterfaceUnregisteredReason reason =
+                AppInterfaceUnregisteredReason.LANGUAGE_CHANGE;
+        params.put(Names.reason, reason);
+        proxy.dispatchIncomingMessage(
+                createProtocolMessage(Names.OnAppInterfaceUnregistered, params,
+                        ProtocolMessage.RPCTYPE_NOTIFICATION, 2));
+
+        ArgumentCaptor<OnLanguageChange> argument =
+                ArgumentCaptor.forClass(OnLanguageChange.class);
+        verify(proxyListenerMock, timeout(CALLBACK_WAIT_TIMEOUT)).
+                onAppUnregisteredAfterLanguageChange(argument.capture());
+        assertEquals(lang, argument.getValue().getLanguage());
+        assertEquals(hmiLang, argument.getValue().getHmiDisplayLanguage());
+    }
+
+    public void testLanguageChangeDifferentReason()
+            throws SyncException, JSONException {
+        IProxyListenerALM proxyListenerMock = mock(IProxyListenerALM.class);
+        SyncProxyALM proxy = getSyncProxyALMNoTransport(proxyListenerMock);
+        assertNotNull(proxy);
+        proxy._wiproVersion = 2;
+
+        // send OnLanguageChange first
+        Hashtable<String, Object> params = new Hashtable<String, Object>();
+        final Language lang = Language.AR_SA;
+        params.put(Names.language, lang);
+        final Language hmiLang = Language.CS_CZ;
+        params.put(Names.hmiDisplayLanguage, hmiLang);
+        proxy.dispatchIncomingMessage(
+                createProtocolMessage(Names.OnLanguageChange, params,
+                        ProtocolMessage.RPCTYPE_NOTIFICATION, 1));
+
+        // send OnAppInterfaceUnregistered second
+        params = new Hashtable<String, Object>();
+        final AppInterfaceUnregisteredReason reason =
+                AppInterfaceUnregisteredReason.MASTER_RESET;
+        params.put(Names.reason, reason);
+        proxy.dispatchIncomingMessage(
+                createProtocolMessage(Names.OnAppInterfaceUnregistered, params,
+                        ProtocolMessage.RPCTYPE_NOTIFICATION, 2));
+
+        verify(proxyListenerMock, timeout(CALLBACK_WAIT_TIMEOUT).never()).
+                onAppUnregisteredAfterLanguageChange(null);
+    }
+
+    public void testAppUnregisteredWithoutLanguageChange()
+            throws SyncException, JSONException {
+        IProxyListenerALM proxyListenerMock = mock(IProxyListenerALM.class);
+        SyncProxyALM proxy = getSyncProxyALMNoTransport(proxyListenerMock);
+        assertNotNull(proxy);
+        proxy._wiproVersion = 2;
+
+        // send OnAppInterfaceUnregistered
+        Hashtable<String, Object> params = new Hashtable<String, Object>();
+        final AppInterfaceUnregisteredReason reason =
+                AppInterfaceUnregisteredReason.LANGUAGE_CHANGE;
+        params.put(Names.reason, reason);
+        proxy.dispatchIncomingMessage(
+                createProtocolMessage(Names.OnAppInterfaceUnregistered, params,
+                        ProtocolMessage.RPCTYPE_NOTIFICATION, 1));
+
+        verify(proxyListenerMock, timeout(CALLBACK_WAIT_TIMEOUT)).
+                onAppUnregisteredAfterLanguageChange(null);
+    }
+
+    public void testMessagesBetweenLanguageChangeAndAppUnregistered()
+            throws JSONException, SyncException {
+        IProxyListenerALM proxyListenerMock = mock(IProxyListenerALM.class);
+        SyncProxyALM proxy = getSyncProxyALMNoTransport(proxyListenerMock);
+        assertNotNull(proxy);
+        proxy._wiproVersion = 2;
+
+        // send OnLanguageChange first
+        Hashtable<String, Object> params = new Hashtable<String, Object>();
+        final Language lang = Language.AR_SA;
+        params.put(Names.language, lang);
+        final Language hmiLang = Language.CS_CZ;
+        params.put(Names.hmiDisplayLanguage, hmiLang);
+        proxy.dispatchIncomingMessage(
+                createProtocolMessage(Names.OnLanguageChange, params,
+                        ProtocolMessage.RPCTYPE_NOTIFICATION, 1));
+
+        // send something in between
+        proxy.dispatchIncomingMessage(
+                createProtocolMessage(Names.OnCommand, null,
+                        ProtocolMessage.RPCTYPE_NOTIFICATION, 2));
+        proxy.dispatchIncomingMessage(createProtocolMessage(Names.Alert, null,
+                ProtocolMessage.RPCTYPE_RESPONSE, 3));
+
+        // send OnAppInterfaceUnregistered last
+        params = new Hashtable<String, Object>();
+        final AppInterfaceUnregisteredReason reason =
+                AppInterfaceUnregisteredReason.LANGUAGE_CHANGE;
+        params.put(Names.reason, reason);
+        proxy.dispatchIncomingMessage(
+                createProtocolMessage(Names.OnAppInterfaceUnregistered, params,
+                        ProtocolMessage.RPCTYPE_NOTIFICATION, 4));
+
+        ArgumentCaptor<OnLanguageChange> argument =
+                ArgumentCaptor.forClass(OnLanguageChange.class);
+        verify(proxyListenerMock, timeout(CALLBACK_WAIT_TIMEOUT)).
+                onAppUnregisteredAfterLanguageChange(argument.capture());
+        assertEquals(lang, argument.getValue().getLanguage());
+        assertEquals(hmiLang, argument.getValue().getHmiDisplayLanguage());
+    }
+}
