@@ -1362,6 +1362,11 @@ public class ProxyService extends Service implements IProxyListenerALMTesting {
     }
 
     @Override
+    public void onAppUnregisteredAfterLanguageChange(OnLanguageChange msg) {
+
+    }
+
+    @Override
 	public void onOnTBTClientState(OnTBTClientState notification) {
 		if (_msgAdapter == null) _msgAdapter = SyncProxyTester.getMessageAdapter();
 		if (_msgAdapter != null) _msgAdapter.logMessage(notification, true);
